Fix SonarQube issues identified in PR_25_0530